# esp32

./: CHANGELOG.md  CONTRIBUTING.md  IMPROVEMENTS.md  QUICK_REFERENCE.md  README.md  SECURITY.md  TESTING.md  flash.py  sdkconfig.defaults
.github/workflows/: build.yml
components/hccapx_serializer/: hccapx_serializer.c
components/webserver/: CMakeLists.txt  UI_IMPROVEMENTS.md  file_manager.c  file_manager.h  webserver.c
components/webserver/pages/: page_index.h
components/webserver/utils/: convert_html.py  convert_html_to_header.ps1  index.html
components/wifi_controller/: CMakeLists.txt  Kconfig  wifi_controller.c
main/: CMakeLists.txt  Kconfig  attack.c  attack.h  debug_utils.c  debug_utils.h  main.c  version.h
